Closed Bug 1575564 Opened 5 years ago Closed 5 years ago

SandboxBroker RemapTempDirs calls into directory service off the main thread

Categories

(Core :: Security: Process Sandboxing, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla70
Tracking Status
firefox70 --- fixed

People

(Reporter: Gijs, Assigned: Gijs)

References

Details

Attachments

(1 file)

Background: see bug 1163021.

Stack:

[task 2019-08-21T13:46:06.862Z] 13:46:06     INFO -  Thread 16 (crashed)
[task 2019-08-21T13:46:06.862Z] 13:46:06     INFO -   0  libxul.so!nsDirectoryService::Get(char const*, nsID const&, void**) [nsDirectoryService.cpp:9806c46c363c9112446e7ae56ead5420fa71a57b : 186 + 0x11]
[task 2019-08-21T13:46:06.865Z] 13:46:06     INFO -   1  libxul.so!mozilla::SandboxBroker::RemapTempDirs(char*, unsigned long, unsigned long) [SandboxBroker.cpp:9806c46c363c9112446e7ae56ead5420fa71a57b : 544 + 0x69]
[task 2019-08-21T13:46:06.866Z] 13:46:06     INFO -   2  libxul.so!mozilla::SandboxBroker::ThreadMain() [SandboxBroker.cpp:9806c46c363c9112446e7ae56ead5420fa71a57b : 756 + 0x21]
[task 2019-08-21T13:46:06.867Z] 13:46:06     INFO -   3  libxul.so!ThreadFunc(void*) [platform_thread_posix.cc:9806c46c363c9112446e7ae56ead5420fa71a57b : 40 + 0x6]
[task 2019-08-21T13:46:06.869Z] 13:46:06     INFO -   4  libpthread-2.23.so!start_thread [pthread_create.c : 333 + 0x11]

in SandboxBrokerTest.Mkdir

This also affects mochitests, cf. https://treeherder.mozilla.org/#/jobs?repo=try&revision=9806c46c363c9112446e7ae56ead5420fa71a57b&selectedJob=262681041 so this seems like an issue with sandboxbroker rather than the test.

Summary: Sandboxbroker gtest (SandboxBrokerTest.Mkdir) calls into directory service off the main thread → SandboxBrokerTest.Mkdir calls into directory service off the main thread
Summary: SandboxBrokerTest.Mkdir calls into directory service off the main thread → SandboxBroker RemapTempDirs calls into directory service off the main thread
Type: task → defect
Assignee: nobody → gijskruitbosch+bugs
Status: NEW → ASSIGNED
Priority: -- → P1
Pushed by gijskruitbosch@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/266d6e0597d8
avoid non-mainthread use of NS_GetSpecialDirectory in linux sandboxbroker, r=jld,gcp
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: