Bug 1575564 - avoid non-mainthread use of NS_GetSpecialDirectory in linux sandboxbroker, r=jld,gcp

Differential Revision: https://phabricator.services.mozilla.com/D42951